# Amolqc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  configure.sh
.vim/ftdetect/: amolqc.vim
.vim/syntax/: amolqcami.vim
bib/: BFD-VQZ-h.abs  BFD-VTZ.abs  BFD-VTZ_ANO.abs  CHAE.abs  CRENBS.abs  DZAE.abs  DZFC.abs  MHE-aug-cc-pVTZ.abs  MIT-aug-cc-pVTZ.abs  MIT-cc-pVTZ.abs  QZ4PAE.abs  S-311Gdp.abs  TZ2PAE.abs  TZ2PFC.abs  TZPAE.abs  TZPFC.abs  aug-cc-pVDZ.abs  aug-cc-pVTZ.abs  cc-pVDZ.abs  cc-pVTZ.abs  hydrogen.abs
bib/ecp/: BFD.ecp  CRE.ecp  MHE.ecp  MIT.ecp
bib/expanded_stos/: QZ4PAE.gbs  README  TZPAE.gbs  TZPAE.gms  TZPAE.ini
cmake/configs/: intelmpi.cmake  openmpi.cmake  openmpi_lapack.cmake  openmpi_mkl.cmake  serial_gnu.cmake  serial_intel.cmake  serial_nag.cmake  serial_nvidia.cmake
cmake/flags/: Flang.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake  NAG.cmake  NVHPC.cmake  PGI.cmake
cmake/modules/: FindMATHLIBS.cmake  FindMKL.cmake
cmake/rules/: lapack.cmake  optlevel.cmake  postRules.cmake  preRules.cmake
cmake/testsuite/: testsuite.cmake  testsuite.sh
cmake/utils/: fortranFunctions.cmake  macros.cmake  pFUnit.cmake  setFlags.cmake  version.cmake
cmds/: generate_sample.cmd  generate_walker.cmd  jas_emin_lin.cmd  jas_emin_lm.cmd  jas_emin_snr.cmd  jas_varmin.cmd  jas_varmin_fast.cmd  jastrow_emin_lin.cmd  jastrow_emin_lm.cmd  jastrow_emin_nw.cmd  jastrow_varmin_fast.cmd  jastrow_varmin_safe.cmd  macro_test.cmd
doc/: user_manual.txt
examples/DMC/Acetone/: Acetone-dmc.in  Acetone-dmc.out  Acetone-vm.wf
examples/DMC/Ethane/: Ethane-dmc.in  Ethane-dmc.out  Ethane-vm.wf
examples/ECP/Emin/: 1.61emin1-10.wf  README  emin-1.wf  emin-2.wf  emin-3.wf  emin-4.wf  emin.in  emin1-1.wf  emin1-2.wf  emin1-3.wf  emin1-4.wf  emin1-5.wf  emin1-6.wf  emin1-7.wf  emin1.in
examples/ECP/Single/: FeS.in  FeS.out  FeS.wf
examples/EDF/: c2h6_ks.wf  edf_sample.in  edf_sample.out  sample.pos
examples/Misc/: C-atom-5Z.wf  cusp_correction.in
examples/VMC/: H2O-with-jas.wf  VMC.in
external_licenses/: ACM.md
make/: moduledepends.py  testsuite.sh  vars.mk
make/configs/: intelmpi.mk  openmpi.mk  serial_gnu.mk  serial_intel.mk  serial_nag.mk
make/flags/: gnu.mk  intel.mk  nag.mk  pgi.mk
src/: CMakeLists.txt  amolqcInterface_m.f90  amolqc_p.f90  aoCut.f90  aoMoCut.f90  aoMoTask_m.f90  aoMo_m.f90  aosData_m.f90  aos_m.f90  assign_m.f90  coulombDensity_m.f90  cuspOpt_m.f90  eConfigs_m.f90  ecpIo_m.f90  ecp_m.f90  eigenVectAnalysis_m.f90  electronDensity_m.f90  elocAndPsiTermsBase_m.f90  elocAndPsiTermsEBFGS_m.f90  elocAndPsiTermsENR_m.f90  elocAndPsiTermsGen_m.f90  elocAndPsiTermsLM_m.f90  elocAndPsiTermsLin_m.f90  elocAndPsiTermsWEBFGS_m.f90  elocData_m.f90  elocTest_m.f90  eloc_m.f90  energyPart_m.f90  fGradPsi2_m.f90  fPsi2_m.f90  findNucElecs_m.f90  global_m.f90  hungarian_m.f90  init_m.f90  initialPositions_m.f90  jastrowAniso_m.f90  jastrowDTN_m.f90  jastrowIC_m.f90  jastrowParamData_m.f90  jastrowSM_m.f90  (+64 more)
src/minimizers/: CMakeLists.txt  fctn_m.f90  line_search_m.f90  line_search_simple_m.f90  line_search_weak_wolfe_m.f90  line_search_ws_m.f90  line_search_ws_simple_both_dir_m.f90  line_search_ws_simple_m.f90  minimizer_bfgs_m.f90  minimizer_factory_m.f90  minimizer_fire_m.f90  minimizer_m.f90  minimizer_steep_desc_m.f90  minimizer_w_sing_m.f90  minimizer_ws_bfgs_m.f90  minimizer_ws_bfgst_m.f90  minimizer_ws_factory_m.f90  minimizer_ws_fire_m.f90  minimizer_ws_newton_m.f90  minimizer_ws_none_m.f90  minimizer_ws_steep_desc_m.f90  rules.mk  singularityCorrection_m.f90  singularityParticles_m.f90
src/minimizers/tests/: CMakeLists.txt  minimizer_tm.f90  minimizer_ws_tm.f90  minimizersTests_p.f90  myfctn_m.f90  myfctn_tm.f90
src/tests/: CMakeLists.txt  cuspt.f90  eConfigs_tm.pf  partition_tm.pf  rhoData_tm.pf  rwSample_t.f90  sphericalIntGrids_t.f90
testsuite/: README.md
testsuite/run/: tests.sh
testsuite/templates/: DMC.in  DMCECP.in  JAS.in  JASECP.in  JASaniso.in  JASanisoECP.in  derivtestECP.in  eloctest.in  eminlin.in  eminlinECP.in  eminlm.in  eminlmECP.in  eminpopt.in  eminpoptECP.in  eminsnr.in  eminsnrECP.in  mrwf.in  paramderivtest.in  sample.in  sampleECP.in  varmin.in  varminECP.in
testsuite/wavefunction/: C2-ECP.wf  C2-cas44-ECP.wf  C2-sm3-ECP.wf  C2-sm444-ECP.wf  C2CAS44.wf  C2CAS44det.wf  CH4-de440.wf  CH4-de885.wf  CH4-mdet.wf  H2O-SM3.wf  H2O-sm444.wf  H2O.wf  ethan-lmo.wf  ethene-sm666.wf  f2-sm220.wf  h2o-sm888.wf
tools/: gamess2wf.rb  gaussian2wf.py  rawData2sample.py  wfgen.py
tools/Basissets/: gamess2abs_ecp.py  runConvertBasisFile.py  runstogtoopt.py
tools/Wfgen/: amolqc2wf.py  gamess2wf.py  mol2wf.py  orca2wf.py  xmvb2wf.py
utils/: CMakeLists.txt  atom_m.f90  bins3D_m.f90  compilerStrings_m.f90  cspline_m.f90  gcube_m.f90  linAlg_m.f90  numderivs_m.f90  parsing_m.f90  rules.mk  sorting_m.f90  string_utility_module.f90  utils_m.f90
utils/basics/: CMakeLists.txt  error_m.f90  globalUtils_m.f90  kinds_m.f90  rules.mk  verbosity_m.f90
utils/ddda/: CMakeLists.txt  boltzmann_m.f90  decorrelation_m.f90  parallelDDDA_m.f90  rules.mk  statistic_m.f90
utils/ddda/tests/: CMakeLists.txt  boltzmann_tm.pf  decorrelation_tm.pf  parallelDDDA_tm.f90  statistic_tm.pf
utils/generic/: CMakeLists.txt  blockAllocator_m.f90  genericFilter_m.f90  plateau_m.f90  rules.mk
utils/generic/tests/: CMakeLists.txt  blockAllocator_tm.pf  genericFilter_tm.pf  plateau_tm.pf
utils/optimizers/: CMakeLists.txt  lbfgsb3_m.f90  nl2sol.f90  nl2sol_i.f90  rules.mk
utils/random/: CMakeLists.txt  mrg_m.f90  mt_m.f90  normal_m.f90  random_m.f90  rules.mk
utils/random/tests/: CMakeLists.txt  normal_tm.pf  randomTests_p.f90
utils/statistics/: CMakeLists.txt  intList_m.f90  newStatistics_m.f90  rules.mk  statistics_m.f90  vectorStatistics_m.f90
utils/statistics/tests/: CMakeLists.txt  intList_tm.f90  newStatistics_tm.f90  statisticsTests_p.f90  statistics_tm.f90
utils/tests/: CMakeLists.txt  atom_tm.f90  bins3D_tm.pf  oldUtilsTests_p.f90  parsing_tm.pf  sorting_tm.pf
(+203 files in other folders)
